[package]
name = "huffman-markov"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80", optional = true }
bitstream-io = "2.2.0"
bitvec = "1.0.1"
clap = { version = "4.5.2", features = ["derive"], optional = true }
hashbrown = "0.14.3"
thiserror = "1.0.57"

[dev-dependencies]
proptest = "1.4.0"
test-strategy = "0.3.1"

[features]
cli = ["dep:clap", "dep:anyhow"]

[[bin]]
name = "huffman_markov"
path = "src/main.rs"
required-features = ["cli"]
